--- a/Template.Api/appsettings.Development.json
+++ b/Template.Api/appsettings.Development.json
@@ -10,5 +10,8 @@
     "Issuer": "Template",
     "Audience": "Template",
     "ExpiryMinutes": 60
+  },
+  "Database": {
+    "ConnectionString": "Server=localhost;Database=Template;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
