--- a/Template.Domain/Template.Domain.csproj
+++ b/Template.Domain/Template.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorOr" Version="0.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.9" />
   </ItemGroup>
 
 </Project>
