Email confirmation done and dusted with unit tests

--- a/Template.Api/appsettings.Development.json
+++ b/Template.Api/appsettings.Development.json
@@ -13,5 +13,13 @@
   },
   "Database": {
     "ConnectionString": "Server=localhost;Database=Template;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MailSettings": {
+    "From": "development@fileshare.com",
+    "Host": "smtp.mailtrap.io",
+    "Port": 2525,
+    "DisplayName": "File Share - Development",
+    "Username": "",
+    "Password": ""
   }
 }
