--- a/Template.Infrastructure/Template.Infrastructure.csproj
+++ b/Template.Infrastructure/Template.Infrastructure.csproj
@@ -33,4 +33,10 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.22.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Email\Templates\EmailConfirmation.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
