--- a/Template.Application/Template.Application.csproj
+++ b/Template.Application/Template.Application.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Account\Queries" />
+  </ItemGroup>
+
 </Project>
