--- a/Template.Infrastructure/Template.Infrastructure.csproj
+++ b/Template.Infrastructure/Template.Infrastructure.csproj
@@ -37,6 +37,9 @@
     <None Update="Email\Templates\EmailConfirmation.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Email\Templates\ResetPassword.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
